[package]
name = "lsm-db"
version = "0.1.0"
edition = "2024"

[dependencies]
lz4_flex  = "0.13.1"
crc32fast = "1"
axum      = { version = "0.8.9", features = ["macros"] }
tokio     = { version = "1.52.3", features = ["full"] }
serde     = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile  = "3.27.0"

[[bench]]
name = "bench"
harness = false
